Update yml file handling for resources