@@ -6,42 +6,47 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.yaml.snakeyaml.Yaml;
 
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.*;
 import java.nio.file.Path;
-import java.util.Collections;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.HashSet;
+import java.nio.file.Paths;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * Singleton manager to load and query microscope configuration from YAML,
- * and write project-specific metadata to JSON. Provides type-safe getters
- * and validation of required keys.
+ * including support for "LOCI"-based lookups via a shared resources_LOCI.yml file.
  */
 public class MicroscopeConfigManager {
     private static final Logger logger = LoggerFactory.getLogger(MicroscopeConfigManager.class);
 
+    // Singleton instance
     private static MicroscopeConfigManager instance;
+
+    // Primary config data loaded from the chosen microscope YAML
     private final Map<String, Object> configData;
 
+    // Shared LOCI resource data loaded from resources_LOCI.yml
+    private final Map<String, Object> resourceData;
+
     /**
-     * Private constructor: loads YAML config into a map.
-     * @param configPath filesystem path to the YAML configuration file
+     * Private constructor: loads both the microscope-specific YAML and the shared LOCI resources.
+     *
+     * @param configPath Filesystem path to the microscope YAML configuration file.
      */
     private MicroscopeConfigManager(String configPath) {
         this.configData = loadConfig(configPath);
+        String resPath = computeResourcePath(configPath);
+        this.resourceData = loadConfig(resPath);
+        if (resourceData.isEmpty()) {
+            logger.warn("Could not load LOCI resources from {}", resPath);
+        }
     }
 
     /**
-     * Obtain singleton instance, loading config on first call.
-     * @param configPath path to microscope YAML
-     * @return shared MicroscopeConfigManager
+     * Initializes and returns the singleton instance. Must be called first with the path to the microscope YAML.
+     *
+     * @param configPath Path to the microscope YAML file.
+     * @return Shared MicroscopeConfigManager instance.
      */
     public static synchronized MicroscopeConfigManager getInstance(String configPath) {
         if (instance == null) {
@@ -49,51 +54,109 @@ public class MicroscopeConfigManager {
         }
         return instance;
     }
-    public static synchronized MicroscopeConfigManager getInstance() {
-        if (instance == null) {
-            throw new IllegalStateException("MicroscopeConfigManager must first be initialized with a configuration path!");
-        }
-        return instance;
+
+    /**
+     * Reloads both the microscope YAML and shared LOCI resources.
+     *
+     * @param configPath Path to the microscope YAML file.
+     */
+    public synchronized void reload(String configPath) {
+        configData.clear();
+        configData.putAll(loadConfig(configPath));
+        String resPath = computeResourcePath(configPath);
+        resourceData.clear();
+        resourceData.putAll(loadConfig(resPath));
     }
 
+    /**
+     * Computes the path to the shared LOCI resources file based on the microscope config path.
+     * For example, transforms
+     * ".../microscopes/config_PPM.yml" → ".../resources_LOCI.yml".
+     *
+     * @param configPath Path to the microscope YAML file.
+     * @return Path to resources_LOCI.yml.
+     */
+    private static String computeResourcePath(String configPath) {
+        Path cfg = Paths.get(configPath);
+        // Go up two levels: <...>/microscopes/config.yml → <...>/resources_LOCI.yml
+        return cfg.getParent().getParent().resolve("resources_LOCI.yml").toString();
+    }
+
+    /**
+     * Loads a YAML file into a Map.
+     *
+     * @param path Filesystem path to the YAML file.
+     * @return Map of YAML data, or empty map on error.
+     */
     @SuppressWarnings("unchecked")
-    private static Map<String, Object> loadConfig(String configPath) {
+    private static Map<String, Object> loadConfig(String path) {
         Yaml yaml = new Yaml();
-        try (InputStream in = new FileInputStream(configPath)) {
+        try (InputStream in = new FileInputStream(path)) {
             Object loaded = yaml.load(in);
             if (loaded instanceof Map) {
                 return new LinkedHashMap<>((Map<String, Object>) loaded);
             } else {
-                logger.error("Unexpected YAML root type: {}", loaded.getClass());
+                logger.error("YAML root is not a map: {}", path);
             }
         } catch (FileNotFoundException e) {
-            logger.error("YAML file not found: {}", configPath, e);
+            logger.error("YAML file not found: {}", path, e);
         } catch (Exception e) {
-            logger.error("Error parsing YAML file: {}", configPath, e);
+            logger.error("Error parsing YAML: {}", path, e);
         }
         return new LinkedHashMap<>();
     }
 
     /**
-     * Navigate nested config keys to retrieve a value.
-     * @param keys sequence of map-keys to traverse
-     * @return the value at nested key, or null if missing
+     * Retrieves a nested configuration item by a sequence of keys.
+     * If a value beginning with "LOCI" is encountered and further nesting is requested,
+     * this method will consult the shared resources_LOCI.yml for the corresponding data.
+     *
+     * @param keys Sequence of nested keys (e.g., "imagingMode","BF_10x","detector","width_px").
+     * @return The final value (String, Number, Map, List, etc.), or null if not found.
      */
     @SuppressWarnings("unchecked")
     public Object getConfigItem(String... keys) {
         Object current = configData;
-        for (String key : keys) {
-            if (current instanceof Map && ((Map<?, ?>) current).containsKey(key)) {
-                current = ((Map<String, Object>) current).get(key);
-            } else {
-                return null;
+        for (int i = 0; i < keys.length; i++) {
+            String key = keys[i];
+            // 1) Normal descent in the microscope config
+            if (current instanceof Map<?, ?> map && map.containsKey(key)) {
+                current = map.get(key);
+                continue;
             }
+            // 2) If current is a LOCI identifier, switch to resourceData
+            if (i > 0 && current instanceof String id && id.startsWith("LOCI")) {
+                String parentField = keys[i - 1];
+                String section;
+                switch (parentField) {
+                    case "detector"      -> section = "ID_Detector";
+                    case "objectiveLens" -> section = "ID_Objective";
+                    case "z_stage"       -> section = "ID_Stage";
+                    default                -> section = null;
+                }
+                if (section != null) {
+                    String normalized = id.replace('-', '_');
+                    Object sec = resourceData.get(section);
+                    if (sec instanceof Map<?, ?> secMap && secMap.containsKey(normalized)) {
+                        Object entry = ((Map<String, Object>) secMap).get(normalized);
+                        if (entry instanceof Map<?, ?> entryMap && entryMap.containsKey(key)) {
+                            current = entryMap.get(key);
+                            continue;
+                        }
+                    }
+                }
+            }
+            // 3) Not found
+            return null;
         }
         return current;
     }
 
     /**
-     * Type-safe getString: returns String or null
+     * Retrieves a String value from the config or resources.
+     *
+     * @param keys Sequence of keys.
+     * @return String value or null.
      */
     public String getString(String... keys) {
         Object v = getConfigItem(keys);
@@ -101,25 +164,31 @@ public class MicroscopeConfigManager {
     }
 
     /**
-     * Type-safe getInteger: returns Integer or null
+     * Retrieves an Integer value from the config or resources.
+     *
+     * @param keys Sequence of keys.
+     * @return Integer value or null.
      */
     public Integer getInteger(String... keys) {
         Object v = getConfigItem(keys);
-        if (v instanceof Number) return ((Number) v).intValue();
+        if (v instanceof Number n) return n.intValue();
         try {
             return (v != null) ? Integer.parseInt(v.toString()) : null;
         } catch (NumberFormatException e) {
-            logger.warn("Expected integer at {} but got {}", String.join("/", keys), v);
+            logger.warn("Expected int at {} but got {}", String.join("/", keys), v);
             return null;
         }
     }
 
     /**
-     * Type-safe getDouble: returns Double or null
+     * Retrieves a Double value from the config or resources.
+     *
+     * @param keys Sequence of keys.
+     * @return Double value or null.
      */
     public Double getDouble(String... keys) {
         Object v = getConfigItem(keys);
-        if (v instanceof Number) return ((Number) v).doubleValue();
+        if (v instanceof Number n) return n.doubleValue();
         try {
             return (v != null) ? Double.parseDouble(v.toString()) : null;
         } catch (NumberFormatException e) {
@@ -129,82 +198,72 @@ public class MicroscopeConfigManager {
     }
 
     /**
-     * Type-safe getBoolean: returns Boolean or null
+     * Retrieves a Boolean value from the config or resources.
+     *
+     * @param keys Sequence of keys.
+     * @return Boolean value or null.
      */
     public Boolean getBoolean(String... keys) {
         Object v = getConfigItem(keys);
-        if (v instanceof Boolean) return (Boolean) v;
-        if (v != null) return Boolean.parseBoolean(v.toString());
-        return null;
+        if (v instanceof Boolean b) return b;
+        return v != null && Boolean.parseBoolean(v.toString());
     }
 
     /**
-     * Type-safe getList: returns List or null
+     * Retrieves a List value from the config or resources.
+     *
+     * @param keys Sequence of keys.
+     * @return List<Object> or null.
      */
     @SuppressWarnings("unchecked")
     public List<Object> getList(String... keys) {
         Object v = getConfigItem(keys);
-        if (v instanceof List) return (List<Object>) v;
-        return null;
+        return (v instanceof List<?>) ? (List<Object>) v : null;
     }
 
     /**
-     * Type-safe getSection: returns nested Map or null
+     * Retrieves a nested Map section from the config or resources.
+     *
+     * @param keys Sequence of keys.
+     * @return Map<String,Object> or null.
      */
     @SuppressWarnings("unchecked")
     public Map<String, Object> getSection(String... keys) {
         Object v = getConfigItem(keys);
-        if (v instanceof Map) return (Map<String, Object>) v;
-        return null;
+        return (v instanceof Map<?, ?>) ? (Map<String, Object>) v : null;
     }
 
     /**
-     * Validate that a set of required key paths exist. Each path is an array of keys.
-     * @param requiredPaths set of String[] representing nested keys
-     * @return missing paths (empty if all present)
+     * Validates that each of the provided key paths exists in the config or resources.
+     *
+     * @param requiredPaths Set of String[] representing nested key paths.
+     * @return Set of missing paths (empty if all are present).
      */
     public Set<String[]> validateRequiredKeys(Set<String[]> requiredPaths) {
-        Set<String[]> missing = new HashSet<>();
+        Set<String[]> missing = new LinkedHashSet<>();
         for (String[] path : requiredPaths) {
             if (getConfigItem(path) == null) missing.add(path);
         }
-        if (!missing.isEmpty())
+        if (!missing.isEmpty()) {
             logger.error("Missing required configuration keys: {}",
                     missing.stream()
                             .map(p -> String.join("/", p))
-                            .toList());
+                            .collect(Collectors.toList())
+            );
+        }
         return missing;
     }
 
     /**
-     * Write out a JSON file containing the given metadata map.
-     * @param metadata map of properties to serialize
-     * @param outputPath target JSON file path
-     * @throws IOException on write error
+     * Writes the provided metadata map out as pretty-printed JSON for debugging or record-keeping.
+     *
+     * @param metadata   Map of properties to serialize.
+     * @param outputPath Target JSON file path.
+     * @throws IOException On write error.
      */
     public void writeMetadataAsJson(Map<String, Object> metadata, Path outputPath) throws IOException {
-        Gson gson = new GsonBuilder().setPrettyPrinting().create();
-        try (FileWriter writer = new FileWriter(outputPath.toFile())) {
-            gson.toJson(metadata, writer);
+        try (Writer w = new FileWriter(outputPath.toFile())) {
+            new GsonBuilder().setPrettyPrinting().create().toJson(metadata, w);
         }
     }
-
-    /**
-     * Reloads the YAML configuration from disk.
-     * @param configPath path to the YAML file
-     */
-    public synchronized void reload(String configPath) {
-        Map<String, Object> fresh = loadConfig(configPath);
-        configData.clear();
-        configData.putAll(fresh);
-    }
-
-    /**
-     * Access the raw configuration map (read-only).
-     * @return unmodifiable view of the config data
-     */
-    public Map<String, Object> getAllConfig() {
-        return Collections.unmodifiableMap(configData);
-    }
-
 }
